# healthcare_ai_backend

./: .gitignore  README.md  healthcare_data.xlsx  pyproject.toml
.github/: copilot-instructions.md
chroma_db_multi/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
src/: agent.py  feedback_agent.py  main.py  trigger_feedback_call.py
src/chroma/: chroma_service.py  generate_excel.py
src/db/: generate_data.py  mongo_service.py
src/models/: user.py
src/utils/: time_utils.py
