[project]
name = "healthcare_ai_backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.2.1",
    "dateparser>=1.2.2",
    "faker>=37.12.0",
    "fastapi[standard]>=0.120.0",
    "livekit-agents[silero,turn-detector]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pymongo>=4.15.3",
    "python-dotenv>=1.1.1",
    "resend>=2.17.0",
    "uvicorn[standard]>=0.38.0",
]
